# lzip-MSVC

./: .gitignore  CMakeLists.txt  config.h.in  decoder.cc  list.cc  lzip.h  lzip.rc.in  lzip_index.cc  main.cc
